--- a/index.html
+++ b/index.html
@@ -227,10 +227,11 @@
             </div>
           </div>
           <div class="contact-main">
-            <iframe data-tally-src="https://tally.so/embed/wgyBvd?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1&formEventsForwarding=1" loading="lazy" width="100%" height="0" frameborder="0" marginheight="0" marginwidth="0" title="Contact form
+            <iframe data-tally-src="https://tally.so/embed/wgyBvd?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Contact form
 "></iframe>
             
-            <!-- <form class="contact-form" id="contact-form-en">
+            <!--
+            <form class="contact-form" id="contact-form-en">
               <label for="contact-from-en">Email</label>
               <input id="contact-from-en" type="email" required>
               <label for="contact-body-en">Message</label>
@@ -241,7 +242,8 @@
               </button>
               <div style="clear: both"></div>
             </form>
-            <div class="contact-result">&nbsp;</div> -->
+            <div class="contact-result">&nbsp;</div>
+            -->
           </div>
         </div>
       </div>
@@ -472,7 +474,7 @@
             </div>
           </div>
           <div class="contact-main"> 
-            <iframe data-tally-src="https://tally.so/embed/wgyBvd?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1&formEventsForwarding=1" loading="lazy" width="100%" height="0" frameborder="0" marginheight="0" marginwidth="0" title="Contact form
+            <iframe data-tally-src="https://tally.so/embed/wgyBvd?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Contact form
 "></iframe>
 
             <!--
