--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             </div>
           </div>
           <div class="contact-main"> 
-            <iframe data-tally-src="https://tally.so/embed/wgyBvd?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Contact form
+            <iframe data-tally-src="https://tally.so/embed/Gxvr7z?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Spanish contact form
 "></iframe>
 
             <!--
