Stylize Tally forms

--- a/index.html
+++ b/index.html
@@ -227,8 +227,10 @@
             </div>
           </div>
           <div class="contact-main">
-            <iframe data-tally-src="https://tally.so/embed/5BKdrb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Contact form
+            <div class="contact-form">
+              <iframe data-tally-src="https://tally.so/embed/5BKdrb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Contact form
 "></iframe>
+            </div>
             
             <!--
             <form class="contact-form" id="contact-form-en">
@@ -474,8 +476,10 @@
             </div>
           </div>
           <div class="contact-main"> 
-            <iframe data-tally-src="https://tally.so/embed/Gxvr7z?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Spanish contact form
+            <div class="contact-form">
+              <iframe data-tally-src="https://tally.so/embed/Gxvr7z?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Spanish contact form
 "></iframe>
+            </div>
 
             <!--
             <form class="contact-form" id="contact-form-es">
@@ -1002,7 +1006,6 @@
       flex: 1;
     }
 
-    /*
     .outro .contact-form {
       padding: 16px;
       border-radius: 6px;
@@ -1010,6 +1013,7 @@
       box-shadow: 0 1px 8px rgb(0 0 0 / 20%);
     }
 
+    /*
     .outro .contact-form > label {
       font-size: 14px;
       font-weight: 500;
