Stylize Tally forms

--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
     }
 
     .outro .contact-form {
-      padding: 16px;
+      padding: 16px 12px 0;
       border-radius: 6px;
       background-color: rgb(255 255 255 / 25%);
       box-shadow: 0 1px 8px rgb(0 0 0 / 20%);
