--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span style="display: inline-block; transform: rotate(-30deg)">🖐</span>
           </h1>
           <p class="intro-description">
-            A <strong>professional translator</strong> working from English, French and Galician into Spanish. I grew up in Galicia (Spain) but spent a few years in France, just a few minutes away from Geneva. When I’m not obsessing over language, you can find me knitting or maybe doing some yoga. I’m also passionate about mental health, as well as nutrition. You can make my heart sing with creative projects, which is why I love transcreation and literary translation. And if you think you might be liking what you’re seeing, keep on reading!
+            A <strong>professional translator and communicator</strong> working from English, French and Galician into Spanish. I grew up in Galicia (Spain) but spent a few years in France, just a few minutes away from Geneva. When I’m not obsessing over language, you can find me singing or making some sourdough bread. With my background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to make a positive impact. You can make my heart sing with creative projects, which is why I love transcreation and literary translation. And if you think you might like what you’re seeing, keep on reading!
           </p>
           <div class="intro-links">
             <a href="#contact-form-en" title="Scroll down to contact form">Contact</a>
@@ -48,10 +48,10 @@
           <li tabindex="0" aria-describedby="copywriting-desc-en">Copywriting</li>
         </ul>
         <ul class="services-descriptions">
-          <li id="translation-desc-en">I can translate texts from English, French and Galician into Spanish. I won't say no to any challenge, but I'm more versed on topics like nutrition, lifestyle medicine, all things knitting and horses. I also love translating fantasy, science fiction and dystopian books.</li>
-          <li id="proofreading-desc-en">I am able to edit, review and proofread already translated texts to check for any spelling or grammar mistakes, as well as basic style improvements. This can be key in terms of quality for the final text, as the first translator can inevitably miss things (because we're all human), so a second pair of eyes could make a whole lot of difference for QA. </li>
-          <li id="transcreation-desc-en">If you need your product's campaign in Spanish, you need a transcreator. My job is to make sure your campaign and your copy translate well to the target country and audience, so that all your hard work doesn't get lost in translation (pun intended). It's a creative process that requires the freedom to draw outside the lines while keeping the essence of the original. Fascinating!</li>
-          <li id="copywriting-desc-en">As well as transcreating marketing campaigns, I also do copywriting, either for campaigns that require you start from scratch, or any other situation in which I may be creating and writing copy from zero more than anything. This is greatly linked to transcreation but can also be needed and required on its own, e.g. for websites, blogs, or social media platforms that were originally in Spanish and don't necessarily exist in English.</li>
+          <li id="translation-desc-en">I provide high-quality translations from English, French and Galician into Spanish, with a strong commitment to accuracy and cultural nuance. While I am capable of handling a broad range of topics, and love exploring new worlds, I have ample experience in areas such as nutrition, lifestyle medicine, knitting, equestrian subjects, and music. I hold myself to the highest standards and I strive to deliver great work with a high attention to detail. </li>
+          <li id="proofreading-desc-en">With extensive experience editing, reviewing and proofreading translated texts, I ensure that every piece of writing is error-free. I carefully check for orthographic, grammatical, and stylistic issues, and offer valuable improvements that enhance the overall quality and flow of the text. Even the most meticulous translators can overlook details, which is why a second set of eyes is essential to ensure accuracy. My proofreading services serve as a crucial step in quality assurance, ensuring that your final text meets the highest standards. I am also happy to proofread texts originally written in Spanish, with the same care and dedication. </li>
+          <li id="transcreation-desc-en">If you're launching a campaign in a foreign language, you don't just need a translator, you need a transcreator. My role is to make sure your message resonates with the target country and audience. This is a creative process that requires the freedom to draw outside the lines while maintaining the essence of the original. It’s all about making sure your campaign connects, inspires, and never gets lost in translation (pun fully intended).</li>
+          <li id="copywriting-desc-en">Sometimes what you need isn’t a translation, but fresh, original copy; whether you’re building a campaign from the ground up or simply refreshing your existing content. While closely related to transcreation, copywriting stands on its own as a creative service that ensures your message is crafted specifically for your Spanish-speaking audience. </li>
         </ul>
       </div>
     </section>
@@ -186,7 +186,7 @@
           </svg>
           <div class="content">
             <h3>Volunteer Translator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p>They say we all gotta start somewhere, but my beginnings were certainly just destiny doing its thing. I’ve been an English lover for a long time, ever since I discovered when I was a teenager that the Internet was a whole other world if you knew English. But that was also when I fell in love with NutritionFacts. As a non-profit organization, a lot of their translation work is done through volunteers, and I jumped on that bandwagon as soon as I felt comfortable enough with my English skills.</p>
+            <p>They say we all gotta start somewhere, but my beginnings were certainly just destiny doing its thing. I’ve been an English lover for a long time, ever since, as a teenager, I discovered that the Internet was a whole other world if you knew English. But that was also when I fell in love with NutritionFacts. As a non-profit organization, a lot of their translation work is done through volunteers, and I jumped on that bandwagon as soon as I felt comfortable enough with my English skills.</p>
             <p>I used Google Translator Toolkit (before it exited the scene, of course) to translate subtitles for about a year, to then start editing transcripts on WordPress as well. It was around this time that NutritionFacts was getting ready to launch the Spanish website, so I got to help out a bit. Not too long after, they started their Spanish SM, and I quickly jumped on that too! And that was the beginning of what would become my professional career. It played a huge part in me pursuing the studies that I did, something for which I’m extremely grateful.</p>
           </div>
         </li>
@@ -194,18 +194,19 @@
           <div class="bullet">2018</div>
           <div class="content">
             <h3>Spanish Social Media and Program Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p>As the Spanish side of NutritionFacts grew, my friend and coworker Diana was in need of non-volunteer help, and she entrusted me with this new job. And there began this incredible journey I’ve been in, where I’ve learned and developed so many skills over the years, while soaking up everything that University of Geneva had to offer from the academic side of things to hone my skills as a translator and communicator (because speaking English is most certainly not enough to be a translator!). This is a part-time position that allows me to have the flexibility that this freelancer life requires, while also giving me so much love, support and team work from my peers, who I get to work with on a daily basis. It involves managing the social media pages and social media volunteers, translating content, and assisting with general tasks related to the management of the Spanish website as needed.</p>
-            <p>Some of the things I’m in charge with include, but are not limited to:</p>
+            <p>As the Spanish side of NutritionFacts grew, my friend and coworker Diana was in need of non-volunteer help, and she entrusted me with this new job. And there began this incredible journey I’ve been in, where I’ve learned and developed so many skills over the years, while soaking up everything that University of Geneva had to offer academically to hone my skills as a translator and communicator (because speaking English is most certainly not enough to be a translator!). This was a part-time position that allowed me to have the flexibility that this freelancer life requires, while also giving me so much love, support and team work from my peers, who I got to work with on a daily basis. It involved managing the social media pages, translating content (like guides, promotional resources, social media content), and assisting with general tasks related to the management of the Spanish website as needed.</p>
+            <p>Some of the things I was in charge of include, but are not limited to:</p>
             <ul class="bulleted">
               <li>Manage the translations of social media content using Asana</li>
               <li>Execute the transcreation and copywriting for new campaigns in Spanish</li>
-              <li>Schedule Spanish content using both social media scheduling systems and the administrative functions of the platforms themselves</li>
+              <li>Schedule Spanish content using social media scheduling systems</li>
               <li>Work with the team on analyzing Spanish SM metrics and brainstorm new ideas to reach our strategic planning goals</li>
               <li>Translate and export Adobe graphics for use across platforms</li>
-              <li>Create and edit content catered to the Spanish-speaking public</li>
-              <li>Proofread the weekly Spanish blog posts, as well as managing the volunteers involved in those translations</li>
+              <li>Edit videos, record Spanish voiceovers and create Spanish captions</li>
+              <li>Proofread the bi-weekly Spanish blog posts, as well as manage the volunteers involved in those translations</li>
+              <li>Translate website strings and upload content to WordPress</li>
             </ul>
-            <p>FYI: Please beware that not all content seen in NutritionFacts’s platforms has been translated or edited by me; this includes social media. A lot of the translations are still done by volunteers.</p>
+            <p>FYI: Please beware that not all content seen in NutritionFacts’s platforms was translated or edited by me; this includes social media. A lot of the translations have been done by volunteers.</p>
           </div>
         </li>
       </ol>
