Improve intro wording

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span style="display: inline-block; transform: rotate(-30deg)">🖐</span>
           </h1>
           <p class="intro-description">
-            A <strong>professional translator and communicator</strong> working from English, French and Galician into Spanish. I grew up in Galicia (Spain) and later spent a few years in France to study at University of Geneva. With my background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to make a positive impact. You can make my heart sing with creative projects, which is why I love transcreation and literary translation. When I’m not obsessing over language, I love singing, playing music, practicing my production skills or making some sourdough bread. And if you think you might like what you’re seeing, keep on reading!
+            A professional translator and communicator working from English, French and Galician into Spanish. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact. You can make my heart sing with creative projects, which is why I enjoy transcreation and literary translation. On that same note, I am also a singer and musician, and I like to constantly learn new skills, so I keep up with a diverse list of hobbies, including reading, baking, knitting and gardening.
           </p>
           <div class="intro-links">
             <a href="#contact-form-en" title="Scroll down to contact form">Contact</a>
