--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="intro-portrait" src="portrait.jpg" alt="Ángela's picture" width="205" height="205">
         <div class="intro-text">
           <h1 class="intro-title">
-            Howdy, I'm Ángela.
+            Howdy, I'm Ángela
             <span style="display: inline-block; transform: rotate(-30deg)">🖐</span>
           </h1>
           <p class="intro-description">
