--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
           </div>
           <div class="contact-main">
-            <div class="contact-form">
+            <div class="contact-form" id="contact-form-en">
               <iframe data-tally-src="https://tally.so/embed/5BKdrb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Contact form
 "></iframe>
             </div>
@@ -477,7 +477,7 @@
             </div>
           </div>
           <div class="contact-main"> 
-            <div class="contact-form">
+            <div class="contact-form" id="contact-form-es">
               <iframe data-tally-src="https://tally.so/embed/Gxvr7z?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Spanish contact form
 "></iframe>
             </div>
