--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <section class="services">
-      <h2>Here are the <strong>services</strong> I provide <span class="emoji">🙇</span></h2>
+      <h2>Here are the main <strong>services</strong> I provide <span class="emoji">🙇</span></h2>
       <div class="services-content">
         <ul class="services-titles">
           <li tabindex="0" aria-describedby="translation-desc-en">Translation</li>
