Update NF job experience

--- a/index.html
+++ b/index.html
@@ -195,20 +195,23 @@
         <li>
           <div class="bullet">2018</div>
           <div class="content">
-            <h3>Spanish Social Media and Program Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p>As the Spanish side of NutritionFacts grew, my friend and coworker Diana was in need of non-volunteer help, and she entrusted me with this new job. And there began this incredible journey I’ve been in, where I’ve learned and developed so many skills over the years, while soaking up everything that University of Geneva had to offer academically to hone my skills as a translator and communicator (because speaking English is most certainly not enough to be a translator!). This was a part-time position that allowed me to have the flexibility that this freelancer life requires, while also giving me so much love, support and team work from my peers, who I got to work with on a daily basis. It involved managing the social media pages, translating content (like guides, promotional resources, social media content) and assisting with general tasks related to the management of the Spanish website as needed.</p>
+            <h3>Spanish Translation Manager at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
+            <p><i>Previously Spanish Social Media and Program Coordinator</i></p>
+            <p>As the Spanish department at NutritionFacts became responsible for more projects, my friend and coworker Diana was in need of non-volunteer help, and she entrusted me with this new position. There began this incredible journey, where I learned and developed so many skills over the years. For the first few, I combined my job at this organization with my studies at University of Geneva, to harness everything it had to offer academically and hone my skills as a translator and communicator (because speaking English is most certainly not enough to be a translator!).</p>
+              <p>This was a part-time position that allowed me to have the flexibility that the freelancer life requires, while also giving me so much love, support and team work from my peers, who I got to collaborate with on a daily basis. I had the opportunity to work in so many areas beyond translation; from social media, to editing, marketing, PR and website management.</p>
             <p>Some of the things I was in charge of include, but are not limited to:</p>
             <ul class="bulleted">
-              <li>Manage the translations of social media content using Asana</li>
-              <li>Execute the transcreation and copywriting for new campaigns in Spanish</li>
-              <li>Schedule Spanish content using social media scheduling systems</li>
-              <li>Work with the team on analyzing Spanish SM metrics and brainstorm new ideas to reach our strategic planning goals</li>
-              <li>Translate and export Adobe graphics for use across platforms</li>
-              <li>Edit videos, record Spanish voiceovers and create Spanish captions</li>
-              <li>Proofread the bi-weekly Spanish blog posts, as well as manage the volunteers involved in those translations</li>
-              <li>Translate website strings and upload content to WordPress</li>
+              <li>Managing the translations of social media content using Asana</li>
+              <li>Executing the transcreation and copywriting for new campaigns in Spanish</li>
+              <li>Scheduling Spanish content using social media scheduling systems</li>
+              <li>Working with the team on analyzing Spanish SM metrics and brainstorming new ideas to reach our strategic planning goals</li>
+              <li>Translating and exporting Adobe graphics for use across platforms</li>
+              <li>Editing videos, recording Spanish voiceovers and creating Spanish captions</li>
+              <li>Proofreading the bi-weekly Spanish blog posts, as well as managing the volunteers involved in those translations</li>
+              <li>Translating website strings and uploading content to WordPress</li>
             </ul>
-            <p>FYI: Please beware that not all content seen in NutritionFacts’s platforms was translated or edited by me; this includes social media. A lot of the translations have been done by volunteers.</p>
+            <p>During my time at NutritionFacts, we grew the Spanish social media pages to 135 thousand followers on Instagram and 90 thousand on Facebook, and published and promoted several resources like an eating guide, a meal planning guide, numerous infographics and an email series.</p>
+            <p>FYI: Please beware that not all content seen in NutritionFacts’s platforms was translated or edited by me; this includes social media. A high number of translations were done by volunteers. Furthermore, since I am no longer part of the team, I am not directly responsible for their current content.</p>
           </div>
         </li>
       </ol>
